[package]
name = "a"
version = "0.1.0"
authors = ["leoython <l.zhou@aftership.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0.55"
